<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addSubjectConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubjectFragment">

    <EditText
        android:id="@+id/editTextSubjectName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="90dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/className"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSubjectStartTime"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/classStartTime"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubjectName" />

    <EditText
        android:id="@+id/editTextAddSubjectTeacher"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/teacherName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubjectStartTime" />

    <Button
        android:id="@+id/buttonAddClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/add"
        android:textColor="#8F8F8F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddSubjectTeacher" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cancel"
        android:textColor="#8F8F8F"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddClass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddSubjectTeacher" />

    <TextView
        android:id="@+id/addSubjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addClass"
        android:textColor="#0051A0"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextSubjectName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>