<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeacherFragment">


    <TextView
        android:id="@+id/addTeacherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTeacher"
        android:textColor="#0051A0"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextTeacherName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="110dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/teacherName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTeacherTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/teacherEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherName" />

    <Button
        android:id="@+id/buttonAddTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/add"
        android:textColor="#8F8F8F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherTextEmailAddress" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cancel"
        android:textColor="#8F8F8F"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddTeacher"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherTextEmailAddress" />


</androidx.constraintlayout.widget.ConstraintLayout>