<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherFragment">

    <TextView
        android:id="@+id/teacherDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/teacherDetails"
        android:textColor="#0051A0"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTeacherName2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/teacherName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherDetailsTextView" />

    <EditText
        android:id="@+id/editTextTeacherTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/teacherEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherName2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTeacherClasses"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/nothing"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherTextEmailAddress2" />

    <Button
        android:id="@+id/buttonTeacherDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/done"
        android:textColor="#8F8F8F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherClasses" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacherName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTeacherName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacherEmail"
        app:layout_constraintBottom_toTopOf="@+id/editTextTeacherTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentlyTeaching"
        app:layout_constraintBottom_toTopOf="@+id/editTextTeacherClasses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>